Fixing menu overflow problem

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -167,6 +167,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 @font-face {
